# go-maro-api

./: .env  Cargo.toml  Cross.toml  LICENSE.md  README.md  compose.yaml  diesel.toml
migrations/2025-02-05-121451_create_links/: down.sql  up.sql
migrations/2025-02-06-134059_create_links/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/diesel/: lib.rs  models.rs  schema.rs
src/web/: main.rs  routes.rs
