[package]
name = "go-maro-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "go_maro_api"

[[bin]]
name = "go_maro_api"
path = "./src/web/main.rs"

[dependencies]
axum = { version = "0.8", features = ["tracing"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
